Попытка сделать сайт портфолио день 1

--- a/index.html
+++ b/index.html
@@ -6,68 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
   <body>
-    <ul>
-      <a href="">
-        <li>Главная</li>
-      </a>
-      <a href="">
-        <li>О себе</li>
-      </a>
-      <a href="">
-        <li>Обратная связь</li>
-      </a>
-      <a href="">
-        <li>Проекты</li>
-      </a>
-    </ul>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab maxime quam,
-      aliquam sapiente repellat tempora aliquid exercitationem dolorem quis
-      suscipit, soluta natus quas possimus veritatis accusamus. Adipisci minus
-      ea quo recusandae nemo magni saepe dolorem! Maiores officiis fuga vero,
-      repellendus consectetur dolore molestiae tempora excepturi sunt
-      repudiandae dolorum praesentium quaerat laborum, obcaecati ea. Earum
-      sapiente vel provident a nisi culpa ad neque explicabo, repellendus
-      exercitationem, quam dolorem molestiae in obcaecati? Qui dolore veritatis
-      quasi maxime, magni error vero mollitia blanditiis minus eaque, sed
-      deleniti, debitis saepe beatae perferendis dignissimos! Recusandae
-      quisquam reprehenderit dolorum ut? Accusamus temporibus reiciendis magni
-      autem reprehenderit quo incidunt? Ex veniam ducimus debitis repudiandae
-      architecto sunt omnis modi libero quia accusantium voluptatum officiis
-      neque optio alias laboriosam delectus nulla commodi fugiat eum ipsum natus
-      sit, aliquam, accusamus voluptas? Odit vero unde autem, amet deleniti,
-      fugiat, suscipit quibusdam commodi officia assumenda dolores incidunt
-      minima. Illo voluptates praesentium deserunt, error deleniti voluptatibus
-      molestias, sapiente ipsum dolores debitis laboriosam sequi nam
-      consequatur, facere veritatis optio dolorum reprehenderit. Corrupti rem
-      dolor, distinctio ducimus non optio minus nemo in quod tempora incidunt
-      cupiditate magni nihil. Molestiae est laborum vero aspernatur aperiam
-      totam sequi dolores voluptatem assumenda nisi blanditiis tempora quod nam
-      impedit, officiis culpa recusandae obcaecati fuga ipsam nemo quis! Fuga
-      optio totam vitae hic modi quaerat dicta alias? Nihil ipsum nulla est nisi
-      ipsa? Qui quibusdam voluptatibus provident nam veritatis aperiam fuga amet
-      doloremque hic neque perferendis libero impedit necessitatibus,
-      reprehenderit accusantium beatae magnam? Nulla voluptatibus sapiente
-      placeat voluptates libero quam optio nobis animi ut architecto vero, quae
-      odio ex necessitatibus incidunt. Laborum reprehenderit incidunt aliquid
-      ducimus rerum consequatur reiciendis ex explicabo, voluptatem aperiam
-      sequi quasi distinctio hic et recusandae vitae temporibus impedit dolor
-      iure delectus nostrum maiores ab obcaecati. Neque, dolor itaque? Optio,
-      magni libero, animi iusto et, voluptatibus temporibus praesentium maiores
-      itaque minima esse sapiente alias aperiam impedit ad deleniti. Ratione
-      placeat dolorem architecto quisquam harum molestiae velit eligendi alias
-      distinctio error ex eius suscipit maiores voluptatem quam, vero, in non
-      molestias, adipisci odio numquam cupiditate mollitia. Ipsam numquam
-      perferendis quasi facere repellat suscipit explicabo consequuntur sapiente
-      accusamus earum. Ex placeat praesentium, recusandae, culpa consequatur
-      exercitationem tempore explicabo eum odit pariatur nostrum veniam ab
-      possimus officia ea sit, repellendus deserunt beatae animi enim quaerat
-      impedit quam quae. Illum quod dignissimos pariatur. Provident, illum.
-      Culpa deserunt iusto nulla velit sapiente tempora nobis dolores, minima
-      quia ullam, quo molestias perferendis placeat!
-    </p>
-    <script src="scripts.js"></script>
+    <nav class="navbar navbar-expand-lg navbar-light bg-danger">
+      <div class="container-fluid">
+        <a href="" class="navbar-brand px-2">Alexandr K.</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item ">
+              <a href="" class="nav-link">О себе</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Скилы</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Мои работы</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Обратная связь</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="content-about-me border bg-light">
+      <div class="container">
+        <div class="row">
+          <h4 class="text-center border-bottom border-2 mt-3 mb-0">Привет меня зовут Александр</h4>
+        </div>
+        <div class="row">
+          <p class="text-center mt-2 mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, omnis aliquid? Fuga eaque cupiditate ullam reprehenderit debitis distinctio, quasi in ea dolore mollitia nemo a odio sequi iste nihil eum. Delectus molestias voluptatibus voluptatem commodi corporis blanditiis nesciunt molestiae in eum exercitationem. Eius consectetur, atque dignissimos dolorum delectus quos quibusdam doloremque odit perspiciatis corrupti modi nam ducimus placeat unde corporis, inventore nisi harum perferendis a aliquid! Animi, blanditiis aperiam quos consequuntur a eaque! Omnis fugit fugiat voluptatum vero culpa consequatur?</p>
+        </div>
+      </div>
+    </div>
+    
+    <footer class="page-footer">
+      <div class="container-fluid text-center text-md-left">
+        <div class="row">
+          <div class="col-md6 mt-md-0 mt-3">
+            <h5 class="text-uppercase">Footer content</h5>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="scripts.js"></script></script>
   </body>
 </html>
