--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-danger">
+    <nav class="navbar navbar-expand-lg navbar-light bg-success">
       <div class="container-fluid">
-        <a href="" class="navbar-brand px-2">Alexandr K.</a>
+        <a href="" class="navbar-brand ms-5">Alexandr K.</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav ms-auto me-5 mb-2 mb-lg-0">
             <li class="nav-item ">
               <a href="" class="nav-link">О себе</a>
             </li>
@@ -34,13 +34,23 @@
       </div>
     </nav>
 
-    <div class="content-about-me border bg-light">
+    <div class="container1">
+      <img class="img-fluid" src="img/c.jpg" alt="">
+      <h3 class="text-light text-on-img mb-1">Hi, i am Alexandr, begginer web developer</h3>
+        <div class="col-4 border-top border-2 mb-4 border-on-img"></div>
+        <div class="col-4 border-top border-2 mb-4 border2-on-img"></div>
+        <p class="text-center mb-3 text-about-me">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga delectus eligendi exercitationem reprehenderit similique consectetur iure reiciendis, soluta impedit officia accusantium laborum minima alias quae sint natus odit in molestias vel velit dolor, harum iusto quo! Ex ea numquam sint!</p>
+    </div>
+
+    <div class="content-skils border-bottom">
       <div class="container">
         <div class="row">
-          <h4 class="text-center border-bottom border-2 mt-3 mb-0">Привет меня зовут Александр</h4>
+          <h4 class="text-center mt-3">То что я умею:</h4>
         </div>
         <div class="row">
-          <p class="text-center mt-2 mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, omnis aliquid? Fuga eaque cupiditate ullam reprehenderit debitis distinctio, quasi in ea dolore mollitia nemo a odio sequi iste nihil eum. Delectus molestias voluptatibus voluptatem commodi corporis blanditiis nesciunt molestiae in eum exercitationem. Eius consectetur, atque dignissimos dolorum delectus quos quibusdam doloremque odit perspiciatis corrupti modi nam ducimus placeat unde corporis, inventore nisi harum perferendis a aliquid! Animi, blanditiis aperiam quos consequuntur a eaque! Omnis fugit fugiat voluptatum vero culpa consequatur?</p>
+          <div class="col-5"></div>
+          <div class="border-skills col-2 border-top border-2"></div>
+          <div class="col-5"></div>
         </div>
       </div>
     </div>
