--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-success">
+
+    <div class="wrap">
+      <div class="grain">
+      </div>  
+    </div>
+    <div class="content-on-img">
+      <p class="text-light">Hi, i am Alexand, and i am</p>
+      <h1 class="text-light">Frontend Web Developer</h1>
+      <p class="text-light">Lorem ipsum dolor sit amet consectetur.</p>
+    </div>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a href="" class="navbar-brand ms-5">Alexandr K.</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false">
@@ -34,13 +45,7 @@
       </div>
     </nav>
 
-    <div class="container1">
-      <img class="img-fluid" src="img/c.jpg" alt="">
-      <h3 class="text-light text-on-img mb-1">Hi, i am Alexandr, begginer web developer</h3>
-        <div class="col-4 border-top border-2 mb-4 border-on-img"></div>
-        <div class="col-4 border-top border-2 mb-4 border2-on-img"></div>
-        <p class="text-center mb-3 text-about-me">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga delectus eligendi exercitationem reprehenderit similique consectetur iure reiciendis, soluta impedit officia accusantium laborum minima alias quae sint natus odit in molestias vel velit dolor, harum iusto quo! Ex ea numquam sint!</p>
-    </div>
+
 
     <div class="content-skils border-bottom">
       <div class="container">
