Services block realase.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
   </head>
   <body>
 
@@ -20,9 +21,9 @@
       <p class="text-light">Lorem ipsum dolor sit amet consectetur.</p>
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a href="" class="navbar-brand ms-5">Alexandr K.</a>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container">
+        <a href="" class="navbar-brand">Alexandr K.</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -47,15 +48,70 @@
 
 
 
-    <div class="content-skils border-bottom">
+    <div class="content-skills bg-light border-bottom">
       <div class="container">
-        <div class="row">
-          <h4 class="text-center mt-3">То что я умею:</h4>
+        <div class="row mb-4">
+          <h2 class="text-center fw-bolder text-uppercase fs-1">This is what i do:</h2>
         </div>
-        <div class="row">
+        <div class="row mb-4">
           <div class="col-5"></div>
-          <div class="border-skills col-2 border-top border-2"></div>
+          <div class="border-skills col-2 border-top border-dark border-2"></div>
           <div class="col-5"></div>
+        </div>
+        <div class="row mb-5">
+          <div class="col-2"></div>
+          <div class="col-8"><p class="text-center fst-italic text-muted fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae possimus distinctio dignissimos nesciunt nam! Dolorum fuga nemo aliquam vel totam.</p></div>
+          <div class="col-2"></div>
+        </div>
+          <div class="row mb-4">
+            <div class="col-1"></div>
+            <div class="col bg-white border-bottom">
+              <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-file-richtext icon mb-4 mt-4" viewBox="0 0 16 16">
+                <path d="M7 4.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0zm-.861 1.542 1.33.886 1.854-1.855a.25.25 0 0 1 .289-.047l1.888.974V7.5a.5.5 0 0 1-.5.5H5a.5.5 0 0 1-.5-.5V7s1.54-1.274 1.639-1.208zM5 9a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1H5zm0 2a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1H5z"/>
+                <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"/>
+              </svg>
+              <h6 class="text-center">Верстка шаблонов</h6>
+              <p class="fst-italic text-center text-muted py-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt molestiae possimus, necessitatibus ullam fugit accusantium neque recusandae excepturi modi non.</p>
+            </div>
+            <div class="col-1"></div>
+            <div class="col bg-white border-bottom">
+              <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-app-indicator icon mb-4 mt-4" viewBox="0 0 16 16">
+                <path d="M5.5 2A3.5 3.5 0 0 0 2 5.5v5A3.5 3.5 0 0 0 5.5 14h5a3.5 3.5 0 0 0 3.5-3.5V8a.5.5 0 0 1 1 0v2.5a4.5 4.5 0 0 1-4.5 4.5h-5A4.5 4.5 0 0 1 1 10.5v-5A4.5 4.5 0 0 1 5.5 1H8a.5.5 0 0 1 0 1H5.5z"/>
+                <path d="M16 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+              </svg>
+              <h6 class="text-center">Создание веб приложений</h6>
+              <p class="fst-italic text-center text-muted py-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea eos quia a qui repudiandae voluptatibus? Consequuntur exercitationem hic ipsum ipsam?</p>
+            </div>
+            <div class="col-1"></div>
+          </div>
+          <div class="row mb-5">
+            <div class="col-1"></div>
+            <div class="col bg-white border-bottom">
+              <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-tools icon mb-4 mt-4" viewBox="0 0 16 16">
+                <path d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.356 3.356a1 1 0 0 0 1.414 0l1.586-1.586a1 1 0 0 0 0-1.414l-3.356-3.356a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3c0-.269-.035-.53-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814L1 0zm9.646 10.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708zM3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026L3 11z"/>
+              </svg>
+              <h6 class="text-center">Парсинг сайтов</h6>
+              <p class="fst-italic text-center text-muted py-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore ipsum officiis nemo laudantium optio aperiam consequuntur at dolor impedit culpa!</p>
+            </div>
+            <div class="col-1"></div>
+          </div>
+      </div>
+    </div>
+
+    <div class="content-myworks">
+      <div class="container">
+        <div class="row mb-4">
+          <h2 class="text-center fw-bolder text-uppercase fs-1">MY WORKS:</h2>
+        </div>
+        <div class="row mb-4">
+          <div class="col"></div>
+          <div class="border-skills col-1 border-top border-2 border-dark"></div>
+          <div class="col"></div>
+        </div>
+        <div class="row mb-4">
+          <div class="col-2"></div>
+          <div class="col-8"><p class="text-center fst-italic text-muted fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae possimus distinctio dignissimos nesciunt nam! Dolorum fuga nemo aliquam vel totam.</p></div>
+          <div class="col-2"></div>
         </div>
       </div>
     </div>
@@ -63,7 +119,7 @@
     <footer class="page-footer">
       <div class="container-fluid text-center text-md-left">
         <div class="row">
-          <div class="col-md6 mt-md-0 mt-3">
+          <div class="col-md6 mt-md-0">
             <h5 class="text-uppercase">Footer content</h5>
           </div>
         </div>
