--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
     <div class="content-skills bg-light border-bottom">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row mb-4">
           <h2 class="text-center fw-bolder text-uppercase fs-1">This is what i do:</h2>
         </div>
@@ -99,7 +99,7 @@
     </div>
 
     <div class="content-myworks">
-      <div class="container">
+      <div class="container-fluid border-bottom">
         <div class="row mb-4">
           <h2 class="text-center fw-bolder text-uppercase fs-1">MY WORKS:</h2>
         </div>
@@ -108,19 +108,205 @@
           <div class="border-skills col-1 border-top border-2 border-dark"></div>
           <div class="col"></div>
         </div>
-        <div class="row mb-4">
+        <div class="row mb-5">
           <div class="col-2"></div>
           <div class="col-8"><p class="text-center fst-italic text-muted fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae possimus distinctio dignissimos nesciunt nam! Dolorum fuga nemo aliquam vel totam.</p></div>
           <div class="col-2"></div>
         </div>
+        <div class="row mb-3 content-project">
+          <div class="col-md-5">
+            <img class="img-fluid" src="photo1.jpg" alt=""></div>
+          <div class="col-md-5">
+            <h5 class="text-center">Name Project</h5>
+            <div class="text-about-project">
+              <p class="fst-italic text-muted py-2" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel hic ducimus fugit ipsam labore rerum possimus aspernatur fugiat voluptates. Voluptas obcaecati eum eius adipisci quod illo sequi soluta!</p>
+            </div>
+            <div class="links-on-projects py-2">
+              <a href="" class="link-dark px-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                  <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                </svg>
+              </a>
+              <a href="" class="link-dark px-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-arrow-up-right-square" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm5.854 8.803a.5.5 0 1 1-.708-.707L9.243 6H6.475a.5.5 0 1 1 0-1h3.975a.5.5 0 0 1 .5.5v3.975a.5.5 0 1 1-1 0V6.707l-4.096 4.096z"/>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3 content-project">
+          <div class="col-md-5">
+            <img class="img-fluid" src="photo1.jpg" alt=""></div>
+          <div class="col-md-5">
+            <h5 class="text-center">Name Project</h5>
+            <div class="text-about-project">
+              <p class="fst-italic text-muted py-2" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel hic ducimus fugit ipsam labore rerum possimus aspernatur fugiat voluptates. Voluptas obcaecati eum eius adipisci quod illo sequi soluta!</p>
+            </div>
+            <div class="links-on-projects py-2">
+              <a href="" class="link-dark px-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                  <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                </svg>
+              </a>
+              <a href="" class="link-dark px-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-arrow-up-right-square" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm5.854 8.803a.5.5 0 1 1-.708-.707L9.243 6H6.475a.5.5 0 1 1 0-1h3.975a.5.5 0 0 1 .5.5v3.975a.5.5 0 1 1-1 0V6.707l-4.096 4.096z"/>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-5 content-project">
+          <div class="col-md-5">
+            <img class="img-fluid" src="photo1.jpg" alt=""></div>
+          <div class="col-md-5">
+            <h5 class="text-center">Name Project</h5>
+            <div class="text-about-project">
+              <p class="fst-italic text-muted py-2" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel hic ducimus fugit ipsam labore rerum possimus aspernatur fugiat voluptates. Voluptas obcaecati eum eius adipisci quod illo sequi soluta!</p>
+            </div>
+            <div class="links-on-projects py-2">
+              <a href="" class="link-dark px-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                  <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                </svg>
+              </a>
+              <a href="" class="link-dark px-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-arrow-up-right-square" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm5.854 8.803a.5.5 0 1 1-.708-.707L9.243 6H6.475a.5.5 0 1 1 0-1h3.975a.5.5 0 0 1 .5.5v3.975a.5.5 0 1 1-1 0V6.707l-4.096 4.096z"/>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="content-my-skills bg-light border-bottom">
+      <div class="container-fluid">
+        <div class="row mb-4">
+          <h2 class="text-center fw-bolder text-uppercase fs-1">MY SKILLS:</h2>
+        </div>
+        <div class="row mb-4">
+          <div class="col"></div>
+          <div class="border-skills col-1 border-top border-2 border-dark"></div>
+          <div class="col"></div>
+        </div>
+        <div class="row mb-5">
+          <div class="col-2"></div>
+          <div class="col-8"><p class="text-center fst-italic text-muted fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae possimus distinctio dignissimos nesciunt nam! Dolorum fuga nemo aliquam vel totam.</p></div>
+          <div class="col-2"></div>
+        </div>
+        <div class="row">
+          <div class="col-md-1"></div>
+          <div class="col-md-5 mb-5">
+            <p class="fs-3">HTML</p>
+            <div class="progress" style="height: 6px;">
+              <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 70%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div class="col-md-5 mb-5">
+            <p class="fs-3">CSS</p>
+            <div class="progress" style="height: 6px;">
+              <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div class="col-md-1"></div>
+        </div>
+        <div class="row mb-5">
+          <div class="col-md-1"></div>
+          <div class="col-md-5 mb-5">
+            <p class="fs-3">JavaScript, Node JS</p>
+            <div class="progress" style="height: 6px;">
+              <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 30%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div class="col-md-5 mb-5">
+            <p class="fs-3">Python</p>
+            <div class="progress" style="height: 6px;">
+              <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 80%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div class="col-md-1"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="send-me border-bottom" style="padding-bottom: 120px;">
+      <div class="container-fluid">
+        <div class="row mb-4">
+          <h2 class="text-center fw-bolder text-uppercase fs-1">send me message:</h2>
+        </div>
+        <div class="row mb-4">
+          <div class="col"></div>
+          <div class="border-skills col-1 border-top border-2 border-dark"></div>
+          <div class="col"></div>
+        </div>
+        <div class="row mb-5">
+          <div class="col-2"></div>
+          <div class="col-8"><p class="text-center fst-italic text-muted fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae possimus distinctio dignissimos nesciunt nam! Dolorum fuga nemo aliquam vel totam.</p></div>
+          <div class="col-2"></div>
+        </div>
+        <div class="row">
+          <div class="col-3"></div>
+          <div class="col-6">
+            <form>
+              <input type="email" class="form-control mb-3" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name">
+              <input type="email" class="form-control mb-3"  id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="E-Mail">
+              <textarea class="form-control mb-3" placeholder="Message" id="exampleFormControlTextarea1" rows="7"></textarea>
+              <button type="button" style="width: 100%;" class="btn btn-dark text-uppercase">send message</button>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
     
-    <footer class="page-footer">
+    <footer class="page-footer bg-dark">
       <div class="container-fluid text-center text-md-left">
+        <div class="row mb-4">
+          <div class="col-md-4"></div>
+          <div class="col-md-4 mt-4">
+            <a href="" class="text-muted me-3" style="text-decoration: none;">
+              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16">
+                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.287 5.906c-.778.324-2.334.994-4.666 2.01-.378.15-.577.298-.595.442-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294.26.006.549-.1.868-.32 2.179-1.471 3.304-2.214 3.374-2.23.05-.012.12-.026.166.016.047.041.042.12.037.141-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8.154 8.154 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629.093.06.183.125.27.187.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.426 1.426 0 0 0-.013-.315.337.337 0 0 0-.114-.217.526.526 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09z"/>
+              </svg>
+            </a>
+            <a href="" class="text-muted me-3" style="text-decoration: none;">
+              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
+                <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
+              </svg>
+            </a>
+            <a href="" class="text-muted me-3" style="text-decoration: none;">
+              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
+              </svg>
+            </a>
+            <a href="" class="text-muted me-3" style="text-decoration: none;">
+              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+              </svg>
+            </a>
+            <a href="" class="text-muted me-3" style="text-decoration: none;">
+              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+              </svg>
+            </a>
+          </div>
+        </div>
         <div class="row">
-          <div class="col-md6 mt-md-0">
-            <h5 class="text-uppercase">Footer content</h5>
+          <div class="col-md-5"></div>
+          <div class="col-md-2">
+            <p class="text-white text-center">Made in Russia with 
+            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-heart-fill text-danger" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+            </svg>
+          </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4"></div>
+          <div class="col-md-4">
+            <p class="text-muted text-center">© 2021 Alexand Kolesnikov</p>
           </div>
         </div>
       </div>
