--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles-animation.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,16 +20,22 @@
       <div class="grain"></div>
     </div>
     <div class="content-on-img">
-      <p class="text-light main-text anim-main">Hi, i am Alexand, and i am</p>
-      <h1 class="text-light main-text anim-main">Frontend Web Developer</h1>
-      <p class="text-light main-text anim-main">
+      <p class="text-light main-text anm anm-fade anm-slip-top">
+        Hi, i am Alexand, and i am
+      </p>
+      <h1 class="text-light main-text anm anm-slip-top anm-fade">
+        Frontend Web Developer
+      </h1>
+      <p class="text-light main-text anm anm-slip-bottom anm-fade">
         Lorem ipsum dolor sit amet consectetur.
       </p>
     </div>
 
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
-        <a href="" class="navbar-brand" data-aos="zoom-in-right">Alexandr K.</a>
+        <a href="" class="navbar-brand anm anm-fade anm-slip-right"
+          >Alexandr K.</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -60,8 +67,10 @@
 
     <div class="content-skills bg-light border-bottom">
       <div class="container-fluid">
-        <div class="row mb-4" data-aos="fade-up">
-          <h2 class="text-center fw-bolder text-uppercase fs-1 main-text">
+        <div class="row mb-4">
+          <h2
+            class="text-center fw-bolder text-uppercase fs-1 main-text anm anm-slip-top anm-fade"
+          >
             This is what i do:
           </h2>
         </div>
@@ -86,8 +95,7 @@
         <div class="row">
           <div class="col-lg-1"></div>
           <div
-            class="col-lg bg-white border-bottom mb-4"
-            data-aos="zoom-in-right"
+            class="col-lg bg-white border-bottom mb-4 anm anm-spring-right anm-fade"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -115,8 +123,7 @@
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="col-lg mb-4 bg-white border-bottom"
-            data-aos="zoom-in-left"
+            class="col-lg mb-4 bg-white border-bottom anm anm-spring-left anm-fade"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -142,9 +149,11 @@
           </div>
           <div class="col-lg-1"></div>
         </div>
-        <div class="row mb-5" data-aos="zoom-in-up">
+        <div class="row mb-5">
           <div class="col-lg-1"></div>
-          <div class="col-lg bg-white border-bottom">
+          <div
+            class="col-lg bg-white border-bottom anm anm-spring anm-fade anm-spring-top"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="64"
@@ -173,8 +182,7 @@
       <div class="container-fluid border-bottom">
         <div class="row mb-4">
           <h2
-            class="text-center fw-bolder text-uppercase fs-1 main-text"
-            data-aos="fade-up"
+            class="text-center fw-bolder text-uppercase fs-1 main-text anm anm-fade anm-slip-top"
           >
             MY WORKS:
           </h2>
@@ -200,8 +208,7 @@
         <div class="row mb-5 content-project">
           <div class="col-md-5">
             <img
-              data-aos="zoom-in-right"
-              class="img-fluid"
+              class="img-fluid anm anm-fade anm-spring-right"
               src="photo1.jpg"
               alt=""
             />
@@ -220,7 +227,7 @@
               </p>
             </div>
             <div class="links-on-projects py-2">
-              <a href="" class="link-dark px-2" data-aos="flip-right">
+              <a href="" class="link-dark anm anm-flip-x px-2">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="64"
@@ -234,7 +241,7 @@
                   />
                 </svg>
               </a>
-              <a href="" class="link-dark px-2" data-aos="flip-left">
+              <a href="" class="link-dark anm anm-flip-x px-2">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="64"
@@ -255,8 +262,7 @@
         <div class="row mb-5 content-project">
           <div class="col-md-5">
             <img
-              data-aos="zoom-in-right"
-              class="img-fluid"
+              class="img-fluid anm anm-fade anm-spring-right"
               src="photo1.jpg"
               alt=""
             />
@@ -274,8 +280,8 @@
                 eligendi.
               </p>
             </div>
-            <div class="links-on-projects py-2">
-              <a href="" class="link-dark px-2" data-aos="flip-right">
+            <div class="links-on-projects anm anm-flip-x py-2">
+              <a href="" class="link-dark px-2">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="64"
@@ -289,7 +295,7 @@
                   />
                 </svg>
               </a>
-              <a href="" class="link-dark px-2" data-aos="flip-left">
+              <a href="" class="link-dark anm anm-flip-x px-2">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="64"
@@ -310,8 +316,7 @@
         <div class="row mb-5 content-project">
           <div class="col-md-5">
             <img
-              data-aos="zoom-in-right"
-              class="img-fluid"
+              class="img-fluid anm anm-fade anm-spring-right"
               src="photo1.jpg"
               alt=""
             />
@@ -330,7 +335,7 @@
               </p>
             </div>
             <div class="links-on-projects py-2">
-              <a href="" class="link-dark px-2" data-aos="flip-right">
+              <a href="" class="link-dark anm anm-flip-x px-2">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="64"
@@ -344,7 +349,7 @@
                   />
                 </svg>
               </a>
-              <a href="" class="link-dark px-2" data-aos="flip-left">
+              <a href="" class="link-dark anm anm-flip-x px-2">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="64"
@@ -369,8 +374,7 @@
       <div class="container-fluid">
         <div class="row mb-4">
           <h2
-            class="text-center fw-bolder text-uppercase fs-1 main-text"
-            data-aos="fade-up"
+            class="text-center fw-bolder text-uppercase fs-1 main-text anm anm-fade anm-slip-top"
           >
             MY SKILLS:
           </h2>
@@ -397,10 +401,9 @@
           <div class="col-md-1"></div>
           <div class="col-md-5 mb-5">
             <p class="fs-3 other-heading other-text">HTML</p>
-            <div class="progress" style="height: 6px">
+            <div class="progress anm anm-loading" style="height: 6px">
               <div
                 class="progress-bar progress-bar-striped bg-success"
-                data-aos="fade-right"
                 role="progressbar"
                 style="width: 70%"
                 aria-valuenow="20"
@@ -411,10 +414,9 @@
           </div>
           <div class="col-md-5 mb-5">
             <p class="fs-3 other-heading other-text">CSS</p>
-            <div class="progress" style="height: 6px">
+            <div class="progress anm anm-loading" style="height: 6px">
               <div
                 class="progress-bar progress-bar-striped bg-info"
-                data-aos="fade-right"
                 role="progressbar"
                 style="width: 50%"
                 aria-valuenow="20"
@@ -429,10 +431,9 @@
           <div class="col-md-1"></div>
           <div class="col-md-5 mb-5">
             <p class="fs-3 other-heading other-text">JavaScript, Node JS</p>
-            <div class="progress" style="height: 6px">
+            <div class="progress anm anm-loading" style="height: 6px">
               <div
                 class="progress-bar progress-bar-striped bg-warning"
-                data-aos="fade-right"
                 role="progressbar"
                 style="width: 30%"
                 aria-valuenow="20"
@@ -443,10 +444,9 @@
           </div>
           <div class="col-md-5 mb-5">
             <p class="fs-3 other-heading other-text">Python</p>
-            <div class="progress" style="height: 6px">
+            <div class="progress anm anm-loading" style="height: 6px">
               <div
                 class="progress-bar progress-bar-striped bg-danger"
-                data-aos="fade-right"
                 role="progressbar"
                 style="width: 80%"
                 aria-valuenow="20"
@@ -464,8 +464,7 @@
       <div class="container-fluid">
         <div class="row mb-4">
           <h2
-            class="text-center fw-bolder text-uppercase fs-1 main-text"
-            data-aos="fade-up"
+            class="text-center fw-bolder text-uppercase fs-1 main-text anm anm-fade anm-slip-top"
           >
             send me message:
           </h2>
@@ -513,10 +512,9 @@
                 rows="7"
               ></textarea>
               <button
-                data-aos="fade-up"
                 type="button"
                 style="width: 100%"
-                class="btn btn-dark text-uppercase other-text"
+                class="btn btn-dark text-uppercase other-text anm anm-fade anm-slip-top"
               >
                 send message
               </button>
@@ -634,16 +632,6 @@
         </div>
       </div>
     </footer>
-
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <script>
-      AOS.init();
-    </script>
     <script src="scripts.js"></script>
   </body>
 </html>
