--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </p>
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
       <div class="container">
         <a href="" class="navbar-brand anm anm-fade anm-slip-right"
           >Alexandr K.</a
@@ -632,6 +632,12 @@
         </div>
       </div>
     </footer>
-    <script src="scripts.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script.js"></script>
+    <script src="script-anim.js"></script>
   </body>
 </html>
