--- a/index.html
+++ b/index.html
@@ -49,23 +49,23 @@
         <div class="collapse navbar-collapse" id="navbarContent">
           <ul class="navbar-nav ms-auto me-5 mb-2 mb-lg-0">
             <li class="nav-item">
-              <a href="" class="nav-link other-text">What i do</a>
+              <a href="#what-i-do" class="nav-link other-text">What i do</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link other-text">My works</a>
+              <a href="#myWorks" class="nav-link other-text">My works</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link other-text">Skills</a>
+              <a href="#skills" class="nav-link other-text">Skills</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link other-text">Send me</a>
+              <a href="#sendMe" class="nav-link other-text">Send me</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <div class="content-skills bg-light border-bottom">
+    <div id="what-i-do" class="content-skills bg-light border-bottom">
       <div class="container-fluid">
         <div class="row mb-4">
           <h2
@@ -75,11 +75,11 @@
           </h2>
         </div>
         <div class="row mb-4">
-          <div class="col-5"></div>
+          <div class="col"></div>
           <div
-            class="border-skills col-2 border-top border-dark border-2"
+            class="border-skills mt-3 col-2 border-top border-dark border-2"
           ></div>
-          <div class="col-5"></div>
+          <div class="col"></div>
         </div>
         <div class="row mb-5">
           <div class="col-2"></div>
@@ -178,7 +178,7 @@
       </div>
     </div>
 
-    <div class="content-myworks">
+    <div id="myWorks" class="content-myworks">
       <div class="container-fluid border-bottom">
         <div class="row mb-4">
           <h2
@@ -370,7 +370,7 @@
       </div>
     </div>
 
-    <div class="content-my-skills bg-light border-bottom">
+    <div id="skills" class="content-my-skills bg-light border-bottom">
       <div class="container-fluid">
         <div class="row mb-4">
           <h2
@@ -460,7 +460,11 @@
       </div>
     </div>
 
-    <div class="send-me border-bottom" style="padding-bottom: 120px">
+    <div
+      id="sendMe"
+      class="send-me border-bottom"
+      style="padding-bottom: 120px"
+    >
       <div class="container-fluid">
         <div class="row mb-4">
           <h2
